# HandyFramework

./: .gitignore  CMakeLists.txt  HandyFramework.vcxproj  HandyFramework.vcxproj.filters
src/3rd/glad/: glad.c  glad.h
src/hd/: hdBuildConfig.hpp
src/hd/Core/: Color.cpp  Color.hpp  Common.hpp  Delegate.hpp  FPSCounter.cpp  FPSCounter.hpp  Handle.hpp  JSON.cpp  JSON.hpp  Log.cpp  Log.hpp  StringHash.cpp  StringHash.hpp  StringUtils.cpp  StringUtils.hpp  Time.cpp  Time.hpp  hdBuildConfig.hpp  hdClock.cpp  hdClock.hpp  hdColor.cpp  hdColor.hpp  hdCommon.cpp  hdCommon.hpp  hdDelegate.hpp  hdFPSCounter.cpp  hdFPSCounter.hpp  hdHandle.hpp  hdLog.cpp  hdLog.hpp  hdMacros.hpp  hdStringStream.cpp  hdStringStream.hpp  hdStringUtils.cpp  hdStringUtils.hpp  hdTime.cpp  hdTime.hpp
src/hd/Graphics/: hdRenderContext.cpp  hdRenderContext.hpp  hdRenderDevice.hpp  hdRenderDeviceD3D11.cpp  hdRenderDeviceGL.cpp
src/hd/IO/: FileStream.cpp  FileStream.hpp  Image.cpp  Image.hpp  Stream.cpp  Stream.hpp  hdConfig.cpp  hdConfig.hpp  hdDeserializer.cpp  hdDeserializer.hpp  hdFileStream.cpp  hdFileStream.hpp  hdFileSystem.cpp  hdFileSystem.hpp  hdFont.cpp  hdFont.hpp  hdImage.cpp  hdImage.hpp  hdSerializer.cpp  hdSerializer.hpp  hdSerializerRW.cpp  hdSerializerRW.hpp  hdStream.cpp  hdStream.hpp
src/hd/Math/: FirstPersonCamera.cpp  FirstPersonCamera.hpp  MathUtils.cpp  MathUtils.hpp  hdFirstPersonCamera.cpp  hdFirstPersonCamera.h  hdFirstPersonCamera.hpp  hdMathUtils.cpp  hdMathUtils.hpp
src/hd/Sound/: hdSoundContext.cpp  hdSoundContext.hpp
src/loguru/: loguru.cpp  loguru.hpp
(+9 files in other folders)
